2007-03-12  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in.in:
	Remove "Application" category (#417362).

2007-03-04  Ross Burton  <ross@burtonini.com>

	* tests/Makefile.am:
	Link to libjuicer.la instead of the sources directly.  This fixes
	srcdir!=builddir builds, thanks Loic Minier. (#414159).

	* libjuicer/Makefile.am:
	marshal.c depends on marshal.h, and whitespace cleanup (Loic).

2007-01-29  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* NEWS:
	Version 2.16.3.

2007-01-28  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am:
	Fix install target (thanks Christian Persch, #401756)

2006-12-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Set the urgency hint on the extract completed dialog (#388577,
	Sebastien Bacher)

2006-12-31  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Fix a compile warning.

2006-12-20  Christian Persch  <chpe@cvs.gnome.org>

	* libjuicer/.cvsignore:
	* tests/Makefile.am:
	Add cvsignore, and use variables instead of configure
	substitutions in Makefile. Bug #387906.

2006-12-08  Adam Petaccia <adam@tpetaccia.com>

	* src/sj-extracting.h:
	* src/sj-play.h:
	* src/sj-prefs.h:
	Added in missing function prototypes

	* src/sj-about.c:
	* src/sj-main.c: 
	* src/sj-prefs.c:
	Actually include respective .h files

	Fixes #383879.

2006-12-07  Adam Petaccia <adam@tpetaccia.com>
	
	* src/sj-main.c:
	* src/sj-prefs.c:
	Mark some data as const (#383488)

2006-12-05  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am:
	* data/sound-juicer.1:
	Add man file (thanks Sven Arvidsson)

2006-11-23  Luca Cavalli  <lcavalli@cvs.gnome.org>

	* src/sj-main.c: (media_removed_cb):
	Make sure we are not playing when media is removed (#378250).

2006-11-19  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* NEWS:
	Version 2.16.2.

2006-11-19  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Don't disable Reread when playing (#347218, Stephen Cook).

2006-10-13  Adam Petaccia <adam@tpetaccia.com>
