@@ -1,3 +1,9 @@
+2007-03-20  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	When displaying strerror(), convert to UTF-8 first (#419512,
+	thanks Pascal Terjan).
+
 2007-03-12  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer.desktop.in.in:
